--- a/bookstore/Gemfile
+++ b/bookstore/Gemfile
@@ -5,8 +5,12 @@ gem 'rails', '3.2.1'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 
-gem 'sqlite3'
+#mis gemas
 
+gem 'simple_form'
+
+gem 'sqlite3'
+gem 'json_pure'
 
 # Gems used only for assets and not required
 # in production environments by default.
